--- a/conf/spark-defaults.conf
+++ b/conf/spark-defaults.conf
@@ -9,3 +9,4 @@
 spark.master                  spark://dn05.chi.shopify.com:7077
 spark.cores.max               150
 spark.ui.port                 0
+spark.yarn.jar                hdfs://nn01.chi.shopify.com/user/sparkles/spark-latest
