--- a/mllib/pom.xml
+++ b/mllib/pom.xml
@@ -112,6 +112,11 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>colt</groupId>
+        <artifactId>colt</artifactId>
+        <version>1.2.0</version>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
