--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ third_party/libmesos.so
 third_party/libmesos.dylib
 build/apache-maven*
 build/zinc*
+build/scala*
 conf/java-opts
 conf/*.sh
 conf/*.cmd
