--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ rat-results.txt
 scalastyle.txt
 conf/spark-defaults.conf.bak
 conf/*.conf
+conf/conf.cloudera.yarn
 scalastyle-output.xml
 
 # For Hive
