--- a/streaming/pom.xml
+++ b/streaming/pom.xml
@@ -71,6 +71,7 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
+      <version>2.4</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
