--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,8 +4,7 @@ FROM centos-infra-dev3.ord2012.labs.aspect.com:5000/centos7base-jdk7u67-python34
 MAINTAINER OMNI-CHANNEL-TEAM
 RUN echo "Creating the 'Spark Master and Worker' Docker container image file..."
 
-ADD spark /root/spark1.3
-ADD startScript.sh /root/spark1.3/startScript.sh
+ADD spark_copy_for_docker /root/spark1.3
 
 WORKDIR /root/spark1.3
 
