[SPARK-4924] Add a library for launching Spark jobs programatically.
This change encapsulates all the logic involved in launching a Spark job
into a small Java library that can be easily embedded into other applications.

Only the `SparkLauncher` class is supposed to be public in the new launcher
lib, but to be able to use those classes elsewhere in Spark some of the
visibility modifiers were relaxed. This allows us to automate some checks
in unit tests, when before you just had a comment that was easily missed.

A subsequent commit will change Spark core and all the shell scripts to use
this library instead of custom code that needs to be replicated for different
OSes and, sometimes, also in Spark code.

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
     <module>external/zeromq</module>
     <module>examples</module>
     <module>repl</module>
+    <module>launcher</module>
   </modules>
 
   <properties>
