--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -29,8 +29,6 @@ jobs:
             network_common, network_shuffle, repl, launcher
             examples, sketch, graphx
           - |-
-            sql
-          - |-
             catalyst, hive-thriftserver
           - |-
             streaming, sql-kafka-0-10, streaming-kafka-0-10,
@@ -42,11 +40,12 @@ jobs:
             pyspark-core, pyspark-streaming, pyspark-ml
           - |-
             sparkr
-        # Here, we split Hive tests into some of slow ones and the rest of them.
+        # Here, we split Hive and SQL tests into some of slow ones and the rest of them.
         included-tags: [""]
         excluded-tags: [""]
         comment: [""]
         include:
+          # Hive tests
           - modules: hive
             java: 1.8
             hadoop: hadoop3.2
@@ -58,6 +57,19 @@ jobs:
             hadoop: hadoop3.2
             hive: hive2.3
             excluded-tags: org.apache.spark.tags.SlowHiveTest
+            comment: "- other tests"
+          # SQL tests
+          - modules: sql
+            java: 1.8
+            hadoop: hadoop3.2
+            hive: hive2.3
+            included-tags: org.apache.spark.tags.ExtendedSQLTest
+            comment: "- slow tests"
+          - modules: sql
+            java: 1.8
+            hadoop: hadoop3.2
+            hive: hive2.3
+            excluded-tags: org.apache.spark.tags.ExtendedSQLTest
             comment: "- other tests"
     env:
       TEST_ONLY_MODULES: ${{ matrix.modules }}
