--- a/sql/hive-thriftserver/src/test/resources/log4j.properties
+++ b/sql/hive-thriftserver/src/test/resources/log4j.properties
@@ -64,4 +64,4 @@ log4j.logger.org.apache.hadoop.hive.ql.io.RCFile=ERROR
 log4j.logger.org.apache.parquet.CorruptStatistics=ERROR
 log4j.logger.parquet.CorruptStatistics=ERROR
 
-# log4j.logger.org.apache.spark.sql.hive.thriftserver.SparkExecuteStatementOperation=OFF
+log4j.logger.org.apache.spark.sql.hive.thriftserver.SparkExecuteStatementOperation=OFF
