Ignore them for now
There is an open issue:
https://github.com/python/mypy/issues/7778

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ python/docs/_site/
 python/test_coverage/coverage_data
 python/test_coverage/htmlcov
 python/pyspark/python
+.mypy_cache/
 reports/
 scalastyle-on-compile.generated.xml
 scalastyle-output.xml
