--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -163,7 +163,9 @@ jobs:
       if: contains(matrix.modules, 'sparkr')
       run: |
         sudo apt-get install -y libcurl4-openssl-dev
-        sudo Rscript -e "install.packages(c('knitr', 'rmarkdown', 'testthat', 'devtools', 'e1071', 'survival', 'arrow', 'roxygen2'), repos='https://cloud.r-project.org/')"
+        sudo Rscript -e "install.packages(c('knitr', 'rmarkdown', 'testthat', 'devtools', 'e1071', 'survival', 'roxygen2'), repos='https://cloud.r-project.org/')"
+        # SPARK-XXX: arrow 1.0.0 breaks arrow unit tests
+        sudo Rscript -e "install.packages('https://cran.r-project.org/src/contrib/Archive/arrow/arrow_0.17.1.tar.gz', repos=NULL, type='source')"
         # Show installed packages in R.
         sudo Rscript -e 'pkg_list <- as.data.frame(installed.packages()[, c(1,3:4)]); pkg_list[is.na(pkg_list$Priority), 1:2, drop = FALSE]'
     # Run the tests.
