--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,8 +17,8 @@ include:
 
 # These allow the documentation to be updated with newer releases
 # of Spark, Scala, and Mesos.
-SPARK_VERSION: 3.0.1
-SPARK_VERSION_SHORT: 3.0.1
+SPARK_VERSION: 3.0.2-SNAPSHOT
+SPARK_VERSION_SHORT: 3.0.2
 SCALA_BINARY_VERSION: "2.12"
 SCALA_VERSION: "2.12.10"
 MESOS_VERSION: 1.0.0
