Move to pyi files

--- a/python/mypy.ini
+++ b/python/mypy.ini
@@ -13,5 +13,8 @@ ignore_errors = True
 [mypy-pyspark.testing.*]
 ignore_errors = True
 
+[mypy-pyspark.tests.*]
+ignore_errors = True
+
 [mypy-pyspark.heapq3]
 ignore_errors = True
